tests/typefunc_bad_ambiguous_call.stderr
tests/typefunc_bad_ambiguous_call.sl:81:82: error: ambiguous call
